syntax = "proto3";

message AvgRequest {
    int32 n = 1;
}

message AvgResponse {
    float result = 1;
}